--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.9"
+# docker-compose.yml
 
 services:
   db:
@@ -26,14 +26,20 @@ services:
     depends_on:
       db:
         condition: service_healthy
-    environment:
-      DATABASE_URL: postgresql+psycopg2://rpg_user:rpg_pass@db:5432/rpg_db
-      FLASK_ENV: development
-    volumes:
-      - ./backend/uploads:/app/uploads
     ports:
       - "5000:5000"
-    command: python -u app/app.py
+    # O volume sincroniza seu código local com o container, ideal para desenvolvimento
+    volumes:
+      - ./backend:/app
+    # Variáveis de ambiente movidas para cá (local correto)
+    environment:
+      - DATABASE_URL=postgresql+psycopg2://rpg_user:rpg_pass@db:5432/rpg_db
+      - FLASK_ENV=development
+      - FLASK_APP=run.py # ou o seu arquivo de entrada principal
+      - FLASK_RUN_HOST=0.0.0.0
+      - FLASK_RUN_PORT=5000
+    # O comando foi removido, pois o CMD do Dockerfile já faz isso.
+    # O Docker Compose usará o CMD do Dockerfile por padrão.
 
   frontend:
     build:
@@ -49,4 +55,4 @@ services:
       - /app/node_modules
 
 volumes:
-  db-data: 
+  db-data:
